--- a/services/payment-service/package.json
+++ b/services/payment-service/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "kafkajs": "^2.2.4"
   }
 }
