--- a/services/kafka/docker-compose.yml
+++ b/services/kafka/docker-compose.yml
@@ -1,17 +1,37 @@
+version: '3.8'
+
 services:
   kafka:
-    image: apache/kafka:3.7.0
+    image: apache/kafka:3.8.0
     container_name: kafka
+    restart: unless-stopped
     environment:
+      # Unique node ID
       KAFKA_NODE_ID: 1
+
+      # Roles for this node (controller + broker)
       KAFKA_PROCESS_ROLES: broker,controller
+
+      # Listener configuration
       KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://0.0.0.0:9094
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
+
+      # Controller configuration
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:9093
+
+      # Storage setup (KRaft mode)
       KAFKA_LOG_DIRS: /tmp/kraft-combined-logs
+      KAFKA_CLUSTER_ID: ZzZZZZZZZZZZZZZZZZZZZZ  # random string for cluster ID, can be anything
+
+      # General configs for single-node mode
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_MIN_INSYNC_REPLICAS: 1
+      KAFKA_NUM_PARTITIONS: 1
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: true
     ports:
       - "9094:9094"
     networks:
@@ -20,15 +40,15 @@ services:
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
     container_name: kafka-ui
+    depends_on:
+      - kafka
+    ports:
+      - "8080:8080"
     environment:
       - KAFKA_CLUSTERS_0_NAME=local-cluster
       - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092
       - KAFKA_CLUSTERS_0_READONLY=false
       - KAFKA_CLUSTERS_0_TOPIC_AUTO_CREATE=true
-    ports:
-      - "8080:8080"
-    depends_on:
-      - kafka
     networks:
       - kafka-network
 
